[package]
name = "rconsole"
version = "1.0.1"
edition = "2021"
description = "A WebSocket-based logging library for Rust"
license = "MIT"
authors = ["NghiNV <nghinv990@gmail.com>"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tungstenite = "0.20"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
os_info = "3.0"
rustc_version = "0.4"